--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: fkirc/skip-duplicate-actions@v3.4.1
         with:
           github_token: ${{ secrets.PAT || secrets.GITHUB_TOKEN }}
-
+          cancel_others: true
 
   build:
     name: Mega-Linter
