--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -4,6 +4,7 @@
 APPLY_FIXES: all
 DEFAULT_BRANCH: main
 FILEIO_REPORTER: false
+IGNORE_GITIGNORED_FILES: true
 PRINT_ALPACA: false
 SHOW_ELAPSED_TIME: true
 
@@ -17,7 +18,7 @@ PRE_COMMANDS:
 
 # Linters
 ENABLE_LINTERS:
-#  - COPYPASTE_JSCPD
+  #  - COPYPASTE_JSCPD
   - GIT_GIT_DIFF
   - JSON_ESLINT_PLUGIN_JSONC
   - JSON_PRETTIER
@@ -32,8 +33,8 @@ ENABLE_LINTERS:
   - PYTHON_ISORT
   - PYTHON_MYPY
   - PYTHON_PYLINT
-#  - SPELL_CSPELL
-#  - SPELL_MISSPELL
+  #  - SPELL_CSPELL
+  #  - SPELL_MISSPELL
   - XML_XMLLINT
   - YAML_PRETTIER
   - YAML_V8R
